# escuadra

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  build_app.py  escuadra.spec  herramienta-calculadora-subred.md  herramienta-potencia-trifasica.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml  security.yml
docs/: api.md  arquitectura.md  atajos-teclado.md  benchmarks.md  casos-de-uso.md  changelog-v0.2.md  checklist-produccion.md  cli-autocompletado.md  cli-historial.md  cli-modo-batch.md  cli-modo-interactivo.md  cli-referencia.md  cobertura-tests.md  como-agregar-modulo.md  comparacion-herramientas.md  configuracion.md  contrato-resultado-uniforme.md  decisiones-arquitectura.md  dependencias.md  desarrollo-local.md  despliegue.md  docker.md  ejemplos.md  empaquetado.md  errores-comunes.md  esquema-llm-tools.md  estadisticas-uso.md  estandares-codigo.md  estilo-commits.md  estructura-proyecto.md  exportar-latex.md  exportar-markdown.md  flujo-de-trabajo.md  flujo-usuario.md  glosario-tecnico.md  glosario.md  guia-contribuidor-primeros-pasos.md  guia-debugging.md  guia-modulo-civil.md  guia-modulo-electrica.md  (+33 more)
docs/modulos/: README.md  civil.md  electrica.md  geometria.md  herramienta-codigo-paridad.md  herramienta-columna-pandeo.md  herramienta-combinacion-cargas.md  herramienta-correccion-fp.md  herramienta-diseno-vial.md  herramienta-figuras-compuestas.md  herramienta-financiera.md  herramienta-numeros-complejos.md  herramienta-resolucion-triangulos.md  herramienta-transformaciones.md  herramientas-circuitos-rc-rl.md  herramientas-sistemas-lineales-nxn.md  matematicas.md  sistemas.md
examples/google-sheets/: README.md  funcion-personalizada.gs
scripts/: generar-changelog.sh  verificar-pyside6.sh  verificar-tests-ubicacion.sh
security/: SECURITY.md
src/: README.md
src/escuadra/: __init__.py  __main__.py  app.py  cli.py  cli_interactivo.py
src/escuadra/api/: servidor_local.py
src/escuadra/config/: loader.py
src/escuadra/core/: carrera.py  comparar.py  dispatcher.py  esquema_llm.py  herramienta.py  historial.py  registry.py
src/escuadra/io/: csv_parser.py  exportador_json.py  exportador_latex.py  exportador_markdown.py  plantilla_exportacion.py
src/escuadra/math/: linear_solver.py  matrix.py  sistemas_lineales_nxn.py  stats.py
src/escuadra/modulos/: __init__.py
src/escuadra/modulos/civil/: __init__.py  area_seccion.py  carga_distribuida.py  columna_pandeo.py  combinacion_cargas.py  deflexion_viga.py  diseno_vial.py  herramienta_columna_pandeo.py  herramienta_combinacion_cargas.py  herramienta_diseno_vial.py  momento_flector.py  viga.py
src/escuadra/modulos/electrica/: __init__.py  caida_tension.py  circuito_serie_paralelo.py  circuitos_rc_rl.py  correccion_fp.py  divisor_tension.py  herramienta_circuitos_rc_rl.py  herramienta_conversion_electrica.py  herramienta_correccion_fp.py  herramienta_divisor_tension.py  herramienta_ley_ohm.py  herramienta_potencia_trifasica.py  ley_ohm.py  potencia.py  potencia_trifasica.py
src/escuadra/modulos/geometria/: __init__.py  calculo_area.py  coordenadas.py  figuras_compuestas.py  herramienta_calculo_area.py  herramienta_figuras_compuestas.py  herramienta_resolucion_triangulos.py  herramienta_transformaciones.py  perimetro.py  resolucion_triangulos.py  transformaciones.py  volumen.py
src/escuadra/modulos/matematicas/: __init__.py  conversor_angulo.py  conversor_energia.py  conversor_longitud.py  conversor_longitud_extendido.py  conversor_masa.py  conversor_presion.py  conversor_temperatura.py  conversor_velocidad.py  error_validacion.py  estadisticas.py  financiera.py  herramienta_calculadora_cientifica.py  herramienta_conversion_unidades.py  herramienta_financiera.py  herramienta_numeros_complejos.py  herramienta_sistemas_lineales.py  numeros_complejos.py  potencias_raices.py  trigonometria.py
src/escuadra/modulos/sistemas/: __init__.py  calculadora_subred.py  codigo_paridad.py  complemento_a_2.py  (+11 more)
src/escuadra/ui/: __init__.py  cargador_herramienta.py  constructor_menu.py  dialogo_acerca_de.py  dialogo_comparar_historial.py  dialogo_preview_exportacion.py  mensajes.py  panel_estadisticas_uso.py  panel_historial.py  progress.py  ventana_principal.py  widget_herramienta.py
src/escuadra/utils/: converter.py  helpers.py  logging_config.py
src/test/: test_conversor_bases.py  test_temperatura.py  test_viga.py
tests/: README.md  conftest.py  test_cli.py  test_converter.py  test_io.py  test_linear_solver.py  test_loader.py  test_loader_config.py  test_matrix.py  test_stats.py  test_utils.py
tests/automatizados/unit/: conftest.py
tests/casos/funcionales/: casos-prueba-funcionales.md
tests/core/: test_dispatcher.py  test_herramienta.py  test_historial.py  test_registry.py
tests/datos/entrada/: sample_temperatures.csv
tests/datos/esperados/: expected_temperatures.json
tests/modulos/: test_civil_avanzado.py  test_complemento_a_2.py  test_conversion_bases.py  test_conversion_electrica.py  test_conversor_bases.py  test_conversores_fisicos.py  test_conversores_longitud_masa_presion.py  test_coordenadas.py  test_divisor_tension.py  test_electrica_avanzada.py  test_geometria_calculos.py  test_ley_ohm.py  test_sistemas_ascii_color.py  test_tablas_verdad.py  test_temperatura.py  test_viga.py
tests/plan/: plan-de-pruebas.md
tests/ui/: test_cargador_herramienta.py  test_constructor_menu.py  test_dialogo_acerca_de.py  test_herramienta_calculo_area.py  test_herramientas_matematicas.py  test_mensajes.py  test_progress.py  test_qt_smoke.py  test_ventana_principal.py  test_widget_herramienta.py
(+1 files in other folders)
