# Build system
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Metadatos del paquete
[project]
name = "escuadra"
version = "0.1.0"
description = "Herramientas de calculo de ingenieria civil y electrica"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SIS-INF"}]

dependencies = [
    "PySide6>=6.6,<7.0",
    "argcomplete>=3.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
]

[project.urls]
Repository = "https://github.com/sis-inf/escuadra"
Documentation = "https://github.com/sis-inf/escuadra/blob/main/README.md"
Issues = "https://github.com/sis-inf/escuadra/issues"
[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-qt",
    "ruff>=0.4",
    "pyinstaller>=6",
    "flake8>=7.0",
    # flake8 no soporta pyproject.toml de forma nativa; este plugin habilita
    # la seccion [tool.flake8] de abajo. Ver https://github.com/john-hen/Flake8-pyproject
    "Flake8-pyproject>=1.2",
]

[project.scripts]
escuadra = "escuadra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.flake8]
# Requiere el plugin Flake8-pyproject (ver dependencias de dev) para que
# flake8 lea esta seccion, ya que no la soporta de forma nativa.
max-line-length = 88
extend-ignore = [
    # E203: espacio antes de ':' -- black formatea los slices asi
    # (ej. "x[1 :]"), y E203 entra en conflicto directo con ese estilo.
    "E203",
    # W503: salto de linea antes de un operador binario -- black prefiere
    # cortar antes del operador, lo opuesto a lo que pide W503 por defecto.
    "W503",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

markers = [
    "slow: tests que tardan más de 1 segundo",
    "integration: tests que leen archivos del sistema",
    "unit: tests unitarios puros"
]

[tool.coverage.run]
source = ["src/escuadra"]
omit = [
    "*/main.py",
    "*/ui/*"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false
